refactor(xht-module-generate): 重构生成模块代码
-移除了字段信息相关的无用代码
- 优化了数据源管理功能，增加了测试连接功能
- 重构了日志管理相关的代码结构
- 调整了表信息管理的接口设计