@@ -7,63 +7,65 @@ import com.xht.framework.core.domain.response.PageResponse;
 import com.xht.framework.mybatis.domain.entity.Entity;
 import org.springframework.util.CollectionUtils;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
- * 基础转换器接口
+ * 基础转换器接口，用于实体与请求/响应对象之间的转换
  *
+ * @param <T>       实体类型，继承自Entity
+ * @param <Request> 请求对象类型，继承自FormRequest
+ * @param <Response> 响应对象类型，继承自IResponse
  * @author xht
- **/
+ */
 public interface BasicConverter<T extends Entity, Request extends FormRequest, Response extends IResponse> {
 
     /**
-     * 将创建请求对象转换为实体对象。
+     * 将创建请求对象转换为实体对象
      *
-     * @param formRequest 创建请求对象
-     * @return 转换后的实体对象
+     * @param formRequest 创建请求对象，非null
+     * @return 转换后的实体对象，非null
      */
     T toEntity(Request formRequest);
 
     /**
      * 将实体对象转换为响应对象
      *
-     * @param entity 实体对象，包含从数据库或其他数据源获取的数据
-     * @return 转换后的响应对象，用于返回给客户端
+     * @param entity 实体对象，包含从数据库获取的数据，非null
+     * @return 转换后的响应对象，用于返回给客户端，非null
      */
     Response toResponse(T entity);
 
     /**
      * 将实体对象列表转换为响应对象列表
      *
-     * @param entityList 实体对象列表，包含多个从数据库或其他数据源获取的实体对象
-     * @return 转换后的响应对象列表，用于返回给客户端
+     * @param entityList 实体对象列表，可为null或空
+     * @return 转换后的响应对象列表，非null（空列表而非null）
      */
     default List<Response> toResponse(List<T> entityList) {
         if (CollectionUtils.isEmpty(entityList)) {
-            return Collections.emptyList();
+            return List.of(); // 使用Java 9+的不可变空列表
         }
-        List<Response> list = new ArrayList<>(entityList.size());
-        for (T sysDictEntity : entityList) {
-            list.add(toResponse(sysDictEntity));
-        }
-        return list;
+
+        return entityList.stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
     }
 
     /**
      * 将分页的实体对象转换为分页的响应对象
      *
-     * @param page 分页的实体对象，包含当前页的数据以及分页信息
-     * @return 转换后的分页响应对象，用于返回给客户端，包含当前页的数据以及分页信息
+     * @param page 分页的实体对象，包含当前页数据及分页信息，非null
+     * @return 转换后的分页响应对象，包含当前页数据及分页信息，非null
      */
     default PageResponse<Response> toResponse(Page<T> page) {
         PageResponse<Response> response = new PageResponse<>();
-        response.setCurrent(page.getCurrent()); // 设置当前页码
-        response.setSize(page.getSize()); // 设置每页显示的数据量
-        response.setTotal(page.getTotal()); // 设置总数据量
-        response.setPages(page.getPages()); // 设置总页数
-        response.setRecords(toResponse(page.getRecords())); // 设置当前页的数据列表
+        response.setCurrent(page.getCurrent());
+        response.setSize(page.getSize());
+        response.setTotal(page.getTotal());
+        response.setPages(page.getPages());
+        response.setRecords(toResponse(page.getRecords()));
         return response;
     }
+
 }
